# szybki-donosik

./: .env.example  .gitignore  app.py  pyproject.toml
src/: image_utils.py  llm.py  location.py  profile_storage.py  sm_client.py  violations.py
