[project]
name = "konfident-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "extra-streamlit-components>=0.1.81",
    "folium>=0.20.0",
    "langchain>=1.2.18",
    "langchain-mistralai>=1.1.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyproj>=3.7.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "streamlit-js-eval>=1.0.0",
]
